Change background color

--- a/TheoPics/Base.lproj/Main.storyboard
+++ b/TheoPics/Base.lproj/Main.storyboard
@@ -17,25 +17,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQb-8C-8f5" customClass="RandomImageWebView" customModule="TheoPics" customModuleProvider="target">
-                                <rect key="frame" x="47" y="308.66666666666669" width="281" height="195"/>
+                            <wkWebView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQb-8C-8f5" customClass="RandomImageWebView" customModule="TheoPics" customModuleProvider="target">
+                                <rect key="frame" x="20" y="311" width="335" height="200"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="IQb-8C-8f5" secondAttribute="height" multiplier="281:195" id="TUd-0F-VyS"/>
+                                    <constraint firstAttribute="width" secondItem="IQb-8C-8f5" secondAttribute="height" multiplier="67:40" id="SUL-vt-grL"/>
                                 </constraints>
                                 <wkWebViewConfiguration key="configuration">
-                                    <dataDetectorTypes key="dataDetectorTypes"/>
+                                    <dataDetectorTypes key="dataDetectorTypes" none="YES"/>
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="usF-jP-YWu">
+                                <rect key="frame" x="99" y="273" width="177" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Change background color"/>
+                                <connections>
+                                    <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lel-w4-G4s"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IQb-8C-8f5" secondAttribute="trailing" constant="47" id="eR1-qM-KmV"/>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qT0-en-jj0"/>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="w0j-vE-pS6"/>
+                            <constraint firstItem="IQb-8C-8f5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="250" constant="20" id="0o0-ck-MTz"/>
+                            <constraint firstItem="usF-jP-YWu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="E12-2O-wCK"/>
+                            <constraint firstItem="IQb-8C-8f5" firstAttribute="top" secondItem="usF-jP-YWu" secondAttribute="bottom" constant="8" symbolic="YES" id="POp-eb-q56"/>
+                            <constraint firstItem="usF-jP-YWu" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="RFd-vR-ErX"/>
+                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UnJ-UD-rEq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IQb-8C-8f5" secondAttribute="trailing" constant="20" id="eYK-Sy-ZRX"/>
+                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="zvK-lr-ADb"/>
                         </constraints>
                     </view>
                     <connections>
@@ -44,7 +56,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138.40000000000001" y="137.4384236453202"/>
+            <point key="canvasLocation" x="136.80000000000001" y="136.69950738916256"/>
         </scene>
     </scenes>
     <resources>
