--- a/TheoPics/Base.lproj/Main.storyboard
+++ b/TheoPics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pEF-dX-r8a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dsa-Ws-FaI">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Multiple Images View Controller-->
+        <!--Multiple-->
         <scene sceneID="w5u-Sr-whN">
             <objects>
                 <viewController id="pEF-dX-r8a" customClass="MultipleImagesViewController" customModule="TheoPics" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="FBP-WP-GAC">
-                                <rect key="frame" x="84" y="256" width="207" height="300"/>
+                                <rect key="frame" x="84" y="236.66666666666663" width="207" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="300" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zu9-zr-u0w">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="300"/>
@@ -35,21 +35,45 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3DQ-iS-kGD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="FBP-WP-GAC" firstAttribute="centerX" secondItem="NKc-sQ-f30" secondAttribute="centerX" id="8va-Hu-jld"/>
-                            <constraint firstItem="FBP-WP-GAC" firstAttribute="centerY" secondItem="NKc-sQ-f30" secondAttribute="centerY" id="aSh-8q-HdB"/>
+                            <constraint firstItem="FBP-WP-GAC" firstAttribute="centerX" secondItem="3DQ-iS-kGD" secondAttribute="centerX" id="8va-Hu-jld"/>
+                            <constraint firstItem="FBP-WP-GAC" firstAttribute="centerY" secondItem="3DQ-iS-kGD" secondAttribute="centerY" id="aSh-8q-HdB"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="rr6-vp-hey" appends="YES" id="J6B-oH-FQZ"/>
+                        </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Multiple" id="y6N-an-Vw5"/>
                     <connections>
                         <outlet property="stack1" destination="zu9-zr-u0w" id="hJN-I9-Fkj"/>
                         <outlet property="stack2" destination="vw1-Ex-vA9" id="CGs-yr-49o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u7U-ay-ymw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="rr6-vp-hey"/>
             </objects>
-            <point key="canvasLocation" x="-754.39999999999998" y="136.69950738916256"/>
+            <point key="canvasLocation" x="-444" y="-259"/>
         </scene>
-        <!--Single Image View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="wPv-ha-EtX">
+            <objects>
+                <tabBarController id="Dsa-Ws-FaI" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6YY-bI-0dJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="pEF-dX-r8a" kind="relationship" relationship="viewControllers" id="DnN-kn-EtX"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="SNu-Ab-nd9"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iIl-qH-p7c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1306" y="111"/>
+        </scene>
+        <!--Single-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SingleImageViewController" customModule="TheoPics" customModuleProvider="target" sceneMemberID="viewController">
@@ -58,7 +82,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQb-8C-8f5" customClass="RandomImageWebView" customModule="ImageWebView">
-                                <rect key="frame" x="20" y="311" width="335" height="200"/>
+                                <rect key="frame" x="20" y="286.66666666666669" width="335" height="200"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="IQb-8C-8f5" secondAttribute="height" multiplier="67:40" id="SUL-vt-grL"/>
@@ -70,7 +94,7 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="usF-jP-YWu">
-                                <rect key="frame" x="99" y="273" width="177" height="30"/>
+                                <rect key="frame" x="99" y="248.66666666666663" width="177" height="30"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Change background color"/>
                                 <connections>
@@ -90,13 +114,14 @@
                             <constraint firstItem="IQb-8C-8f5" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="zvK-lr-ADb"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Single" id="zA9-oj-ENj"/>
                     <connections>
                         <outlet property="imageView" destination="IQb-8C-8f5" id="1y4-qc-bms"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="136.69950738916256"/>
+            <point key="canvasLocation" x="-444" y="451"/>
         </scene>
     </scenes>
     <resources>
