--- a/TheoPics/Base.lproj/Main.storyboard
+++ b/TheoPics/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dsa-Ws-FaI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pEF-dX-r8a">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="FBP-WP-GAC">
-                                <rect key="frame" x="84" y="236.66666666666663" width="207" height="300"/>
+                                <rect key="frame" x="84" y="261" width="207" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="300" axis="vertical" distribution="equalSpacing" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zu9-zr-u0w">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="300"/>
@@ -55,102 +55,6 @@
                 <tapGestureRecognizer id="rr6-vp-hey"/>
             </objects>
             <point key="canvasLocation" x="-444" y="-259"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="wPv-ha-EtX">
-            <objects>
-                <tabBarController id="Dsa-Ws-FaI" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6YY-bI-0dJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="pEF-dX-r8a" kind="relationship" relationship="viewControllers" id="cmM-Qv-iPR"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="a6a-ux-6s3"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iIl-qH-p7c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1306" y="111"/>
-        </scene>
-        <!--Single-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="SingleImageViewController" customModule="TheoPics" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQb-8C-8f5" customClass="RandomImageWebView" customModule="ImageWebView">
-                                <rect key="frame" x="20" y="286.66666666666669" width="335" height="200"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="ROr-x7-5ZI"/>
-                                    <constraint firstAttribute="width" secondItem="IQb-8C-8f5" secondAttribute="height" multiplier="67:40" id="SUL-vt-grL"/>
-                                </constraints>
-                                <wkWebViewConfiguration key="configuration">
-                                    <dataDetectorTypes key="dataDetectorTypes" none="YES"/>
-                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                    <wkPreferences key="preferences"/>
-                                </wkWebViewConfiguration>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="ROr-x7-5ZI"/>
-                                    </mask>
-                                </variation>
-                            </wkWebView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="GIu-nd-zPS">
-                                <rect key="frame" x="87" y="248" width="201" height="30"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U4g-2V-lYA">
-                                        <rect key="frame" x="0.0" y="0.0" width="45" height="30"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Resize"/>
-                                        <connections>
-                                            <action selector="changeWidth:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yr1-fa-OL2"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="usF-jP-YWu">
-                                        <rect key="frame" x="75" y="0.0" width="57" height="30"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Colorize"/>
-                                        <connections>
-                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lel-w4-G4s"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPu-gu-uth">
-                                        <rect key="frame" x="162" y="0.0" width="39" height="30"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Reset"/>
-                                        <connections>
-                                            <action selector="resetColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TWm-2S-wmW"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="250" constant="20" id="0o0-ck-MTz" userLabel="padding"/>
-                            <constraint firstItem="GIu-nd-zPS" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="JET-v1-OEc"/>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="top" secondItem="GIu-nd-zPS" secondAttribute="bottom" constant="8.6666666666666856" id="Pi1-J8-PCK"/>
-                            <constraint firstItem="GIu-nd-zPS" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Stl-qm-9CO"/>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UnJ-UD-rEq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IQb-8C-8f5" secondAttribute="trailing" constant="20" id="eYK-Sy-ZRX"/>
-                            <constraint firstItem="IQb-8C-8f5" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="zvK-lr-ADb"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Single" id="zA9-oj-ENj"/>
-                    <connections>
-                        <outlet property="fixedWidthConstraint" destination="ROr-x7-5ZI" id="RAa-hQ-slx"/>
-                        <outlet property="imageView" destination="IQb-8C-8f5" id="1y4-qc-bms"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-444" y="451"/>
         </scene>
     </scenes>
     <resources>
